VOL-4002 VOL-3690 switch to new Doctrine MySql driver

--- a/app/api/config/autoload/local.php.dist
+++ b/app/api/config/autoload/local.php.dist
@@ -47,12 +47,12 @@ return [
     'doctrine' => [
         'connection' => [
             'orm_default' => [
-                'driverClass' => \Doctrine\DBAL\Driver\PDOMySql\Driver::class,
+                'driverClass' =>\Doctrine\DBAL\Driver\PDO\MySQL\Driver::class,
                 // Database connection details
                 'params' => $doctrine_connection_params,
             ],
             'export' => [
-                'driverClass' => \Doctrine\DBAL\Driver\PDOMySql\Driver::class,
+                'driverClass' => \Doctrine\DBAL\Driver\PDO\MySQL\Driver::class,
                 'params' => $doctrine_connection_params +
                     [
                         'driverOptions' => [
