--- a/composer.json
+++ b/composer.json
@@ -51,8 +51,8 @@
         "qandidate/toggle": "^1.1",
         "ramsey/uuid": "^3.6",
         "ruflin/elastica": "7.1",
+        "saeven/zf3-purifier": "^1.1",
         "simplesamlphp/saml2": "~3.4.2",
-        "soflomo/purifier": "^1.0",
         "symfony/filesystem": "^5",
         "symfony/finder": "^5",
         "symfony/lock": "^5",
