--- a/app/api/composer.json
+++ b/app/api/composer.json
@@ -31,6 +31,7 @@
         "caseyamcl/guzzle_retry_middleware": "^2.7.1",
         "doctrine/doctrine-orm-module": "^5",
         "doctrine/orm": "~2.16.0",
+        "doctrine/persistence": "^2.1",
         "dvsa/authentication-cognito": "^2.0",
         "dvsa/laminas-config-cloud-parameters": "^0.1.0",
         "dvsa/php-govuk-account": "^1.0",
