--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -167,6 +167,7 @@ return [
     'message_queue' => [
         'CompanyProfile_URL' => '__QUEUE-URL__',
         'ProcessInsolvency_URL' => '__QUEUE-URL__',
+        'TransXChangeConsumer_URL' => 'http://host.docker.internal:4566/000000000000/txc-local-output',
     ],
 
     // CPMS service
@@ -225,6 +226,12 @@ return [
         'region' => 'eu-west-1',
         'version' => 'latest',
         'useEnvCredentials' => true,
+        'global' => [
+            'endpoint' => 'http://host.docker.internal:4566',
+        ],
+        's3' => [
+          'use_path_style_endpoint' => true,
+        ],
     ],
 
     'mail' => array(
@@ -280,7 +287,13 @@ return [
             'bus_registration' => true,
             'processed_data' => true,
             'short_notice' => true
-        ]
+        ],
+        // The output bucket for TransXChange. This bucket will container the resulting PDFs.
+        'output_s3_bucket' => 'txc-local-output',
+        // The cross account role that VOL will assume to access the output bucket and output SQS queue.
+        'txc_consumer_role_arn' => 'arn:aws:iam::000000000000:role/txc-local-consumer-role',
+        // The maximum number of SQS message to consume per run.
+        'max_queue_messages_per_run' => '100',
     ],
 
     'nr' => [
