--- a/.github/workflows/build-vol-api-pr.yml
+++ b/.github/workflows/build-vol-api-pr.yml
@@ -34,8 +34,6 @@ jobs:
       id-token: write   # This is required for requesting the JWT
       contents: read    # This is required for actions/checkout
 
-    
-
     steps:
     - uses: actions/checkout@v3
 
@@ -47,12 +45,12 @@ jobs:
     - name: Download the compose file 
       run: |
         php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-        php composer-setup.php --install-dir=/usr/local/bin --filename=composer.phar
+        php composer-setup.php --install-dir=/usr/local/bin --filename=composer
         php -r "unlink('composer-setup.php');"
 
     - name: install composer dependency
       run: |
-        php /usr/local/bin/composer.phar install --optimize-autoloader --no-interaction --no-dev
+       composer install --optimize-autoloader --no-interaction --no-dev
 
     - name: Build application
       run: |
