[AWSRESET1-313]: updated workflow

--- a/.github/workflows/build-vol-api-pr.yml
+++ b/.github/workflows/build-vol-api-pr.yml
@@ -12,7 +12,7 @@ jobs:
     secrets:
       SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
     with:
-      severity-threshold: 'high'
+      severity-threshold: high
 
   # static-analysis:
   #   uses: dvsa/.github/.github/workflows/php-static.yml@main
