--- a/composer.json
+++ b/composer.json
@@ -100,7 +100,10 @@
         "cs": "phpcs --severity=1 --standard=vendor/dvsa/coding-standards/src/Profiles/DVSA/CS/ruleset.xml",
         "coverage": "phpunit -c test/phpunit.xml --coverage-html ./test/coverage/html",
         "sonar": "phpunit -c test/phpunit.xml --coverage-clover ./test/coverage/coverage-report.clover --log-junit ./test/coverage/log.junit",
-        "update-syms": "composer-update-syms"
+        "update-syms": "composer-update-syms",
+        "clear-config-cache": "php bin/clear-config-cache.php",
+        "post-install-cmd": "@clear-config-cache",
+        "post-update-cmd": "@clear-config-cache"
     },
     "extra": {
         "nexus-push": {
