--- a/.github/workflows/vol-api-build-deploy.yml
+++ b/.github/workflows/vol-api-build-deploy.yml
@@ -59,8 +59,7 @@ jobs:
       run: |
         envsubst < dockerfile | tee dockerfile.tmp
         mv dockerfile.tmp dockerfile
-        IMAGE_SHA=$(git rev-parse --short HEAD)
-        echo "BASE_IMAGE=${IMAGE_SHA}" >> $GITHUB_ENV
+        echo "BASE_IMAGE=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
         BASE_IMAGE=$(head -n1 dockerfile)
         echo "BASE_IMAGE=${BASE_IMAGE#* }" >> $GITHUB_ENV
 
