--- a/.github/workflows/vol-api-build-deploy.yml
+++ b/.github/workflows/vol-api-build-deploy.yml
@@ -103,74 +103,74 @@ jobs:
         BASE_IMAGE=$(head -n1 dockerfile)
         echo "BASE_IMAGE=${BASE_IMAGE#* }" >> $GITHUB_ENV
 
-    # - name: Set VOL_API_IMAGE_TAG at PR level
-    #   run: |
-    #     echo "VOL_API_IMAGE_TAG=pr-approved-vol-api-${BASE_IMAGE#*:}-$IMAGE_SHA" >> $GITHUB_ENV
+    - name: Set VOL_API_IMAGE_TAG at PR level
+      run: |
+        echo "VOL_API_IMAGE_TAG=pr-approved-vol-api-${BASE_IMAGE#*:}-$IMAGE_SHA" >> $GITHUB_ENV
 
-    # - name: Set VOL_API_IMAGE_TAG at mainline
-    #   if: github.ref == 'refs/heads/main'
-    #   run: |
-    #     echo "VOL_API_IMAGE_TAG=approved-vol-api-${BASE_IMAGE#*:}-$IMAGE_SHA" >> $GITHUB_ENV
+    - name: Set VOL_API_IMAGE_TAG at mainline
+      if: github.ref == 'refs/heads/main'
+      run: |
+        echo "VOL_API_IMAGE_TAG=approved-vol-api-${BASE_IMAGE#*:}-$IMAGE_SHA" >> $GITHUB_ENV
 
-    # - name: Setup Notation CLI
-    #   uses: notaryproject/notation-action/setup@v1
-    #   with:
-    #     version: 1.0.0
+    - name: Setup Notation CLI
+      uses: notaryproject/notation-action/setup@v1
+      with:
+        version: 1.0.0
 
-    # - name: Set up Notation AWS Signer plugin
-    #   run: |
-    #     wget https://d2hvyiie56hcat.cloudfront.net/linux/amd64/installer/deb/latest/aws-signer-notation-cli_amd64.deb
-    #     sudo dpkg -i aws-signer-notation-cli_amd64.deb
-    #     notation version
-    #     notation plugin ls
+    - name: Set up Notation AWS Signer plugin
+      run: |
+        wget https://d2hvyiie56hcat.cloudfront.net/linux/amd64/installer/deb/latest/aws-signer-notation-cli_amd64.deb
+        sudo dpkg -i aws-signer-notation-cli_amd64.deb
+        notation version
+        notation plugin ls
 
-    # - name: Configure AWS credentials on Shared Core ECR
-    #   uses: aws-actions/configure-aws-credentials@v4.0.1
-    #   with:
-    #     role-to-assume: ${{ secrets.DVSA_AWS_ROLE_SHAREDCORECR }}
-    #     role-session-name: GitHub_to_AWS_via_FederatedOIDC
-    #     aws-region: ${{ vars.DVSA_AWS_REGION }}
+    - name: Configure AWS credentials on Shared Core ECR
+      uses: aws-actions/configure-aws-credentials@v4.0.1
+      with:
+        role-to-assume: ${{ secrets.DVSA_AWS_ROLE_SHAREDCORECR }}
+        role-session-name: GitHub_to_AWS_via_FederatedOIDC
+        aws-region: ${{ vars.DVSA_AWS_REGION }}
 
-    # - name: Login to Shared Core ECR
-    #   id: login-ecr-sharedcoreecr
-    #   uses: aws-actions/amazon-ecr-login@v2.0.1
+    - name: Login to Shared Core ECR
+      id: login-ecr-sharedcoreecr
+      uses: aws-actions/amazon-ecr-login@v2.0.1
 
-    # - name: Build VOL API image after verifying Base image
-    #   run: |
-    #     notation inspect $BASE_IMAGE
-    #     docker build -t ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPO_NAME}:${VOL_API_IMAGE_TAG} \
-    #       --build-arg DVSA_AWS_SHAREDCOREECR_ID=${{secrets.DVSA_AWS_SHAREDCOREECR_ID}} .
+    - name: Build VOL API image after verifying Base image
+      run: |
+        notation inspect $BASE_IMAGE
+        docker build -t ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPO_NAME}:${VOL_API_IMAGE_TAG} \
+          --build-arg DVSA_AWS_SHAREDCOREECR_ID=${{secrets.DVSA_AWS_SHAREDCOREECR_ID}} .
 
-    # - name: Snyk scan VOL API image
-    #   id: scan-api-image
-    #   uses: snyk/actions/docker@master
-    #   env:
-    #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-    #   with:
-    #     image: ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPO_NAME}:${VOL_API_IMAGE_TAG}
-    #     args: --file=dockerfile
-    #   continue-on-error: true
+    - name: Snyk scan VOL API image
+      id: scan-api-image
+      uses: snyk/actions/docker@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        image: ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPO_NAME}:${VOL_API_IMAGE_TAG}
+        args: --file=dockerfile
+      continue-on-error: true
 
-    # - name: Configure AWS credentials on Non Production VOL ECR
-    #   uses: aws-actions/configure-aws-credentials@v4.0.1
-    #   with:
-    #     role-to-assume: ${{ secrets.VOL_AWS_ROLE_TOOLING_NONPROD }}
-    #     role-session-name: GitHub_to_AWS_via_FederatedOIDC
-    #     aws-region: ${{ vars.DVSA_AWS_REGION}}
+    - name: Configure AWS credentials on Non Production VOL ECR
+      uses: aws-actions/configure-aws-credentials@v4.0.1
+      with:
+        role-to-assume: ${{ secrets.VOL_AWS_ROLE_TOOLING_NONPROD }}
+        role-session-name: GitHub_to_AWS_via_FederatedOIDC
+        aws-region: ${{ vars.DVSA_AWS_REGION}}
 
-    # - name: Login to Non Production VOL ECR
-    #   id: login-ecr-vol-tooling-non-prod
-    #   uses: aws-actions/amazon-ecr-login@v2
+    - name: Login to Non Production VOL ECR
+      id: login-ecr-vol-tooling-non-prod
+      uses: aws-actions/amazon-ecr-login@v2
 
-    # - name: Push VOL API image
-    #   run: |
-    #     docker push ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPO_NAME}:${VOL_API_IMAGE_TAG}
+    - name: Push VOL API image
+      run: |
+        docker push ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPO_NAME}:${VOL_API_IMAGE_TAG}
 
-    # - name: Sign VOL API image
-    #   if: github.ref == 'refs/heads/main'
-    #   run: |
-    #     notation sign ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPO_NAME}:${VOL_API_IMAGE_TAG} \
-    #       --plugin "com.amazonaws.signer.notation.plugin" --id "${{ secrets.DVSA_AWS_NONPRODVOLTOOLING_IMAGE_SIGNING_PROFILE }}"
+    - name: Sign VOL API image
+      if: github.ref == 'refs/heads/main'
+      run: |
+        notation sign ${AWS_ACCOUNT_ID_VOL_NP_TOOLING}.dkr.ecr.${AWS_REGION}.amazonaws.com/${REPO_NAME}:${VOL_API_IMAGE_TAG} \
+          --plugin "com.amazonaws.signer.notation.plugin" --id "${{ secrets.DVSA_AWS_NONPRODVOLTOOLING_IMAGE_SIGNING_PROFILE }}"
 
     # # - name: Deploy on Static environment
     # #   if: github.event_name == 'pull_request' && github.event.label.name == 'cd ready'
